GUI-1991 bug with dag not showing table overview

--- a/stylesheets/less/partials/dag.less
+++ b/stylesheets/less/partials/dag.less
@@ -705,6 +705,10 @@
             z-index: -1;
         }
 
+        &.empty .background {
+            height: 44px;
+        }
+
         .heading {
             font-size: 11px;
             font-weight: bold;
